Update to Discord4J v3